k8s/shiori/templates/deployment.shiori.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shiori
spec:
  replicas: 1
  revisionHistoryLimit: 3

  selector:
    matchLabels:
      app: shiori

  template:
    metadata:
      labels:
        app: shiori
    spec:
      containers:
        - name: shiori
          image: ghcr.io/go-shiori/shiori:latest
          command: ["/usr/bin/shiori", "serve"]
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - mountPath: /srv/shiori
              name: shiori-data
            - mountPath: /tmp
              name: tmp
          resources:
            requests:
              memory: "75Mi"
              cpu: "10m"

      volumes:
        - name: shiori-data
          persistentVolumeClaim:
            claimName: shiori-data
        - name: tmp
          emptyDir:
            medium: Memory
