k8s/shiori/templates/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: shiori
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: shiori
