k8s/shiori/templates/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: shiori
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`shiori.kevingomez.fr`)
      services:
        - kind: Service
          name: shiori
          port: http
  tls:
    secretName: shiori-cert
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: shiori-http
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`shiori.kevingomez.fr`)
      middlewares:
        - name: redirect-to-https
          namespace: traefik
      services:
        - kind: Service
          name: shiori
          port: http
